feat: Implementado funções de colisão e vida. Realizado também o ajuste na tela, que o inimigo esta ficando preso.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,10 @@
     "time.h": "c",
     "timer.h": "c",
     "life.h": "c",
-    "enemy.h": "c"
+    "enemy.h": "c",
+    "unistd.h": "c",
+    "stdlib.h": "c",
+    "helicopter.h": "c",
+    "gameover.h": "c"
   }
 }
