--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
     "stdio.h": "c",
     "collision.h": "c",
     "menu.h": "c",
-    "sdl_mixer.h": "c"
+    "sdl_mixer.h": "c",
+    "wing.h": "c"
   }
 }
