--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
   "files.associations": {
     "timer.h": "c",
     "stdio.h": "c",
-    "keyboard.h": "c"
+    "keyboard.h": "c",
+    "sdl.h": "c",
+    "ranking.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
