--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "stdio.h": "c",
     "keyboard.h": "c",
     "sdl.h": "c",
-    "ranking.h": "c"
+    "ranking.h": "c",
+    "typeinfo": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
